# vtuber-parent

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  base.py  loop.py  registry.py
backend/app/agent/tools/: __init__.py  screenshot.py
backend/app/llm/: prompts.py  service.py  session.py  streaming.py
backend/app/memory/: __init__.py  compression.py  db.py  extraction.py  manager.py  models.py  prompts.py  recall.py
backend/app/tts/: base.py  dashscope_tts.py
backend/app/ws/: protocol.py
backend/tests/: test_memory_compression.py  test_memory_db.py  test_memory_extraction.py  test_memory_recall.py  test_memory_session.py  test_streaming.py  test_tts.py  test_ws.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/src/audio/: player.ts
frontend/src/character/live2d/: CharacterStage.tsx  controller.ts
frontend/src/console/: App.tsx
frontend/src/pet/: PetApp.tsx
frontend/src/ws/: client.ts
